Start hooking up the utility lib with a basic init function
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/compile/meson.build
+++ b/src/compile/meson.build
@@ -9,6 +9,9 @@ executable(
     include_directories: [
         config_h_dir,
     ],
+    dependencies: [
+        link_hook_lib,
+    ],
     install: true,
     install_dir: path_sbindir,
 )
