Allow compiling as static binaries
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/compile/meson.build
+++ b/src/compile/meson.build
@@ -2,6 +2,13 @@ compile_sources = [
     'main.c',
 ]
 
+compile_link_args = []
+
+if with_static_binary == true
+    compile_link_args += '-static'
+endif
+
+
 # Main hook used to AoT compile
 executable(
     'aa-lsm-hook-compile',
@@ -9,6 +16,7 @@ executable(
     include_directories: [
         config_h_dir,
     ],
+    link_args: compile_link_args,
     dependencies: [
         link_hook_lib,
     ],
