--- a/src/load/meson.build
+++ b/src/load/meson.build
@@ -2,6 +2,12 @@ load_sources = [
     'main.c',
 ]
 
+load_link_args = []
+
+if with_static_binary == true
+    load_link_args += '-static'
+endif
+
 # Main hook used to load at boot
 executable(
     'aa-lsm-hook-load',
@@ -9,6 +15,7 @@ executable(
     include_directories: [
         config_h_dir,
     ],
+    link_args: load_link_args,
     dependencies: [
         link_hook_lib,
     ],
