First pass at 0.1.0
 - Full rewrite in Go for maintainability
 - Relicensed as Apache 2.0
 - New Features
   - Single executable
   - Configurable AppArmor Profile directories
     - Better `snapd` co-integration
   - Support for AppArmor 2.13+ (switch to /var/cache/apparmor)

--- a/data/aa-lsm-hook.service
+++ b/data/aa-lsm-hook.service
@@ -6,7 +6,7 @@ Before=sysinit.target
 
 [Service]
 Type=oneshot
-ExecStart=@SBINDIR@/aa-lsm-hook-load
+ExecStart=/usr/sbin/aa-lsm-hook
 
 [Install]
 WantedBy=multi-user.target
