Force aa-lsm-hook to run after snapd and add snapd profiles to the default config

--- a/data/aa-lsm-hook.service
+++ b/data/aa-lsm-hook.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Load AppArmor profiles
 DefaultDependencies=no
-After=local-fs.target
+After=local-fs.target snapd.service
 Before=sysinit.target
 
 [Service]
