Remove special-case for snapd apparmor profiles
Snapd is transitioning to apparmor-ABI pinned security profiles, so that
ongoing updates to the kernel do not give new meaning to the existing
security profiles (don't break userspace principle).

Out of several possible ways that this can be achieved, the most
pragmatic one turned out to involve passing a non-default value to
apparmor_parser, along with a path to a file internally managed by
snapd, see [1].

Since snapd introduced snapd.apparmor.service several years ago, it can
already control compilation and loading of compiled profiles into the
kernel and distribution-managed apparmor profiles no longer need to
understand or special-case snapd profiles in any way.

By removing this we make aa-lsm-hook compatible with the upcoming change
in snapd. At some point in time omission of the ABI pinned profiles may
lead to unexpected behavior changes to applications running under snap
confinement.

[1] https://github.com/snapcore/snapd/pull/13711

Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/data/aa-lsm-hook.service
+++ b/data/aa-lsm-hook.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Load AppArmor profiles
 DefaultDependencies=no
-After=local-fs.target snapd.service
+After=local-fs.target
 
 [Service]
 Type=oneshot
